MSP/Three_tier_architecture/terraform/igw.tf
# 創建 Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main-igw"
  }
}
